Mise en place post components + dossier scss

--- a/frontend/groupomania/src/index.html
+++ b/frontend/groupomania/src/index.html
@@ -27,6 +27,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- icone -->
+    <script
+      src="https://kit.fontawesome.com/ef3f829da5.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
